adding docker-compose file with postgres, creating entities, refactoring all repositories and refactoring swagger
