# src/routes/specification.routes.ts
@@ -1,11 +1,11 @@
 import { Router } from "express";
-import { createSpecificationController } from "../modules/cars/useCases/createSpecification";
+import { CreateSpecificationController } from "../modules/cars/useCases/createSpecification/CreateSpecificationController";
 
 const specificationRoutes = Router();
 
+const createSpecificationController = new CreateSpecificationController();
+
 // create specification
-specificationRoutes.post("/", (req, res) => {
-  return createSpecificationController.handle(req, res);
-});
+specificationRoutes.post("/", createSpecificationController.handle);
 
 export { specificationRoutes };
